# pulse-data

./: .bandit  .calculation_pipeline_templates  .coderabbit.yaml  .coveragerc  .directory  .dockerignore  .gcloudignore  .geminiignore  .git-blame-ignore-revs  .gitbook.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .sops.yaml  .terraform.lock.hcl  .travis.yml  .yarnrc.yml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.asset-generation  Dockerfile.asset-generation.dockerignore  Dockerfile.case-triage-pathways  Dockerfile.case-triage-pathways.dockerignore  Dockerfile.justice-counts  Dockerfile.justice-counts.dockerignore  Dockerfile.prototypes  Dockerfile.recidiviz-base  Dockerfile.resource-search  Dockerfile.resource-search-scraper-job  LICENSE  Makefile  Pipfile  README.md  SUMMARY.md  YARN_SECURITY_MIGRATION.md  (+60 more)
.circleci/: Dockerfile  config.yml
.claude/: settings.json
.claude/commands/: security-review.md
.claude/rules/: python-style.md  security.md
.devcontainer/: README.md  devcontainer.json  postCreate.sh  postStart.sh
.github/: dependabot.yml  labeler.yml  pull_request_template.md  release.yml  runs-on.yml
.github/ISSUE_TEMPLATE/: adhoc-analysis-request.md  analysis_request.md  bug_report.md  feature_request.md  general-task.md  ingest_raw_data_reimport.md  ingest_rerun.md  policy_model.md  schema_change_request.md  state_data_ask.md  validation_error.md
.github/runner_images/: README.md
.github/scripts/: check_notebooks_outputs.py
.github/workflows/: ci.yml  codeql.yml  docker-image-scan.yml  pipenv-lock.yaml
bandit_configs/: bandit-baseline.json
calculator/: README.md  __init__.py  calculator.py  metrics.py  pipeline.py
calculator/recidivism/: __init__.py  calculator.py  identifier.py  metrics.py  pipeline.py  recidivism_event.py
frontends/admin-panel/: .eslintrc.json  README.md  package.json  tsconfig.json
frontends/case-triage/: .eslintrc.json  README.md  craco.config.js  package.json  tsconfig.json  wdio.conf.js
frontends/prototypes/: .firebaserc  README.md  firebase.json  firestore.rules
githooks/: post-checkout  post-merge  pre-commit
ingest/: README.md  __init__.py  docket.py  queue_control.py  scraper_control.py  sessions.py  tracker.py  worker.py
ingest/models/: __init__.py  scrape_key.py  scrape_session.py
lib/Flask-1.0.2.dist-info/: RECORD
lib/PyMySQL-0.9.2.dist-info/: RECORD
lib/SQLAlchemy-1.2.14.dist-info/: METADATA  RECORD  WHEEL
lib/attrs-18.2.0.dist-info/: RECORD
lib/cffi-1.11.5.dist-info/: RECORD
lib/chardet-3.0.4.dist-info/: RECORD
lib/cryptography-2.4.2.dist-info/: RECORD
lib/more_itertools-4.3.0.dist-info/: RECORD
lib/pbr-3.1.1.dist-info/: RECORD
lib/pg8000-1.11.0.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
lib/protobuf-3.6.1.dist-info/: RECORD
lib/requests-2.18.4.dist-info/: RECORD
lib/requests_toolbelt-0.8.0.dist-info/: RECORD
lib/setuptools-40.6.3.dist-info/: RECORD
lib/simplejson-3.12.0.dist-info/: METADATA  RECORD  metadata.json
lib/urllib3-1.22.dist-info/: RECORD
models/: __init__.py  env_vars.py  inmate.py  inmate_facility_snapshot.py  record.py  snapshot.py
name_lists/: README.md  last_and_first.csv  last_only.csv  us_ny_names.csv
nodejs/asset-generation/: .eslintrc.json  README.md  globalTestSetup.ts  package.json  testSetup.ts  vite.config.ts
recidiviz/: .coderabbit.yaml  __init__.py  server.py  server_blueprint_registry.py  server_config.py
recidiviz/admin_panel/: admin_panel_store.py  admin_stores.py  all_routes.py  case_triage_helpers.py  cloud_sql_export_to_gcs.py  constants.py  dataset_metadata_store.py  gcs_import_to_cloud_sql.py  ingest_dataflow_operations.py  ingest_metadata_store.py  ingest_operations_store.py  lineage_store.py  routes.py  server.py  utils.py  validation_metadata_store.py
recidiviz/aggregated_metrics/: aggregated_metric_collection_config.py  aggregated_metric_view_collector.py  aggregated_metrics.py  aggregated_metrics_utils.py  aggregated_metrics_view_builder.py  aggregated_metrics_view_collector.py  all_aggregated_metrics_view_builder.py  assignment_event_aggregated_metrics.py  assignment_sessions_view_builder.py  assignment_sessions_view_collector.py  assignment_span_aggregated_metrics.py  assignments_by_time_period_view_builder.py  dataset_config.py  impact_reports_aggregated_metrics_configurations.py  impact_reports_aggregated_metrics_view_collector.py  impact_reports_views.py  metric_time_period_config.py  metric_time_periods.py  metrics_assignment_sessions.py  misc_aggregated_metrics.py  period_event_aggregated_metrics.py  period_span_aggregated_metrics.py  standard_aggregated_metrics_collection_config.py  standard_deployed_metrics_by_population.py  standard_deployed_unit_of_analysis_types_by_population_type.py  supervision_officer_caseload_count_spans.py  usage_reports_aggregated_metrics_configurations.py  view_config.py
recidiviz/airflow/: .airflowignore  Pipfile  README.md  airflow.cfg  calculation_pipeline_dag.py  iap_httprequest_operator.py  pyproject.toml  recidiviz_dataflow_operator.py  setup.cfg
recidiviz/application_data_import/: server.py
recidiviz/appsscript/: .clasp.json  CreateReport.js  Helpers.js  QueryFunctions.js  README.md  UpdateForm.js  appsscript.json
recidiviz/auth/: auth0_client.py  auth_api_schemas.py  auth_endpoint.py  auth_users_endpoint.py  cleanup_user_overrides.py  constants.py  helpers.py  import_ingested_users.py
recidiviz/backup/: backup_manager.py
recidiviz/big_query/: CLAUDE.md  address_overrides.py  big_query_address.py  big_query_address_formatter.py  big_query_attr_validators.py  big_query_client.py  (+33 more)
scraper/: README.md  __init__.py  queue_control.py  recidiviz.py  worker.py
stubs/: contextvars.pyi  fakeredis.pyi  google_crc32c.pyi  greenlet.pyi  gspread.pyi  marshmallow_enum.pyi  pygtrie.pyi  setuptools.pyi  tqdm.pyi
tests/: context.py  populate_test_db.py
travis/: base.sh  deploy_staging.sh  export_commits.sh
utils/: __init__.py  auth.py  data_migration.py  environment.py  regions.py
(+17645 files in other folders)
